fix: Refactor Search Event API
