# src/controllers/event.controller.ts
@@ -1,7 +1,7 @@
 import { Response } from "express";
 import { IPaginationQuery, IReqUser } from "../utils/interfaces";
 import response from "../utils/response";
-import EventModel, { eventDAO, TEvent } from "../models/event.model";
+import EventModel, { eventDAO, TypeEvent } from "../models/event.model";
 import { FilterQuery, isValidObjectId } from "mongoose";
 
 export default {
@@ -19,7 +19,7 @@ export default {
       }
     */
     try {
-      const payload = { ...req.body, createdBy: req.user?.id } as TEvent;
+      const payload = { ...req.body, createdBy: req.user?.id } as TypeEvent;
       await eventDAO.validate(payload);
       const result = await EventModel.create(payload);
       response.success(res, result, "Successfully created Event");
@@ -30,29 +30,67 @@ export default {
   async findAll(req: IReqUser, res: Response) {
     /**
       #swagger.tags = ['Events']
+      #swagger.parameters['limit'] = {
+        in: 'query',
+        type: 'number',
+        default: 10
+      }
+      #swagger.parameters['page'] = {
+        in: 'query',
+        type: 'number',
+        default: 1
+      }
+      #swagger.parameters['category'] = {
+        in: 'query',
+        type: 'string'
+      }
+      #swagger.parameters['isOnline'] = {
+        in: 'query',
+        type: 'boolean'
+      }
+      #swagger.parameters['isFeatured'] = {
+        in: 'query',
+        type: 'boolean'
+      }
+      #swagger.parameters['isPublish'] = {
+        in: 'query',
+        type: 'boolean'
+      }
     */
     try {
+      const buildQuery = (filter: any) => {
+        let query: FilterQuery<TypeEvent> = {};
+
+        if (filter.search) query.$text = { $search: filter.search };
+        if (filter.category) query.category = filter.category;
+        if (filter.isOnline) query.isOnline = filter.isOnline;
+        if (filter.isFeatured) query.isFeatured = filter.isFeatured;
+        if (filter.isPublish) query.isPublish = filter.isPublish;
+
+        return query;
+      };
+
       const {
         limit = 10,
         page = 1,
         search,
-      } = req.query as unknown as IPaginationQuery;
+        category,
+        isOnline,
+        isFeatured,
+        isPublish,
+      } = req.query;
 
-      const query: FilterQuery<TEvent> = {};
-
-      if (search) {
-        Object.assign(query, {
-          $or: [
-            {
-              name: { $regex: search, $options: "i" },
-            },
-          ],
-        });
-      }
+      const query = buildQuery({
+        search,
+        category,
+        isOnline,
+        isFeatured,
+        isPublish,
+      });
 
       const result = await EventModel.find(query)
-        .limit(limit)
-        .skip((page - 1) * limit)
+        .limit(+limit)
+        .skip((+page - 1) * +limit)
         .sort({ createdAt: -1 })
         .exec();
 
@@ -62,9 +100,9 @@ export default {
         res,
         result,
         {
-          current: page,
+          current: +page,
           total: count,
-          totalPages: Math.ceil(count / limit),
+          totalPages: Math.ceil(count / +limit),
         },
         "Successfully fetched event data"
       );
